[package]
name = "hhmmss_rs"
version = "0.1.3"
authors = ["TwentyXX<twenty.takumi1024@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Format time and duration in chrono, std::time and time as HH:MM:SS and HH:MM:SS.xxx"
repository = "https://github.com/TwentyXX/hhmmss"
readme = "README.md"
documentation = "https://docs.rs/hhmmss_rs"
keywords = ["time", "duration", "chrono", "std::time", "format", "debug", "HH:MM:SS", "HH:MM:SS.xxx", "hhmmss", "hhmmss_rs"]
categories = ["time", "date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
time = "0.3"
